Commit by Elias Politakis

--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,7 @@
 	<script type='application/javascript' language='javascript' src='./bin/org/Coconut2D/html5/HTMLCanvasElement.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/org/Coconut2D/html5/HTMLDocument.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/org/Coconut2D/html5/HTMLWindow.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/org/Coconut2D/html5/ImageDataBuffer.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/org/Coconut2D/ui/UIView.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/org/Coconut2D/ui/UIControlView.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/org/Coconut2D/ui/UIButtonView.jobj' charset='utf-8'></script>
