Commit by Elias Politakis

--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 <head>
 	<script type='application/javascript' language='javascript' src='./src/Coconut2D/Constants.js' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./src/Coconut2D/Coconut.js' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/anim/CocoAudio.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/anim/CocoImageSibling.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/anim/CocoRect.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/anim/CocoSequence.jobj' charset='utf-8'></script>
