--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,6 @@
 	<script type='application/javascript' language='javascript' src='./bin/usr/animations/Test.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./src/main.js' charset='utf-8'></script>
 </head>
-<body style="border:none;padding:0;margin:0">
+<body>
 </body>
 </html>
