--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,17 @@
 	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/game/CocoSpritePlayer.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/game/CocoSpriteVisual.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/game/CocoTiledLayer.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUIView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUIControlView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUIButtonView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUICheckboxView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUILabelView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUINavbarView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUIPageView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUIPickerView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUIScrollView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUITabView.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/ui/CocoUITextView.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/usr/GameEngine.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/usr/animations/BitmapSymbolsTest.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/usr/animations/SynthesisTest.jobj' charset='utf-8'></script>
