--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,7 @@
 	<script type='application/javascript' language='javascript' src='./bin/usr/animations/BitmapSymbolsTest.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/usr/animations/SynthesisTest.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/usr/animations/Test.jobj' charset='utf-8'></script>
+	<script type='application/javascript' language='javascript' src='./bin/usr/animations/TestSequences.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./src/main.js' charset='utf-8'></script>
 </head>
 <body style="border:none;padding:0;margin:0">
