Commit by Elias Politakis

--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,5 @@
 <html>
 <head>
-<style type="text/css">
-	html, body, div, canvas {
-		padding : 0;
-		margin : 0;
-		border : 0;
-	}
-</style>
 	<script type='application/javascript' language='javascript' src='./src/Coconut2D/Constants.js' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./src/Coconut2D/Coconut.js' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/anim/CocoAudio.jobj' charset='utf-8'></script>
@@ -49,6 +42,6 @@
 	<script type='application/javascript' language='javascript' src='./bin/usr/animations/TestText.jobj' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./src/main.js' charset='utf-8'></script>
 </head>
-<body>
+<body style="border:none;padding:0;margin:0">
 </body>
 </html>
