Commit by Elias Politakis

--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,22 @@
 <html>
 <head>
+	<style>
+	@font-face {
+		font-family: "Helvetica";
+		src: url("./assets/fonts/Helvetica-BoldOblique.ttf");
+		font-weight: bold;
+		font-style: italic, oblique;
+	}
+	@font-face {
+		font-family: "Helvetica";
+		src: url("./assets/fonts/Helvetica-Oblique.ttf");
+		font-style: italic, oblique;
+	}
+	@font-face {
+		font-family: "Helvetica.ttf";
+		src: url("./assets/fonts/Helvetica.ttf");
+	}
+	</style>
 	<script type='application/javascript' language='javascript' src='./src/Coconut2D/Constants.js' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./src/Coconut2D/Coconut.js' charset='utf-8'></script>
 	<script type='application/javascript' language='javascript' src='./bin/Coconut2D/anim/CocoAudio.jobj' charset='utf-8'></script>
