Commit by Elias Politakis

--- a/.SDK/DeviceWrappers/web/HTML5/index.html
+++ b/.SDK/DeviceWrappers/web/HTML5/index.html
@@ -82,7 +82,7 @@
 
 </head>
 
-<body style="border:none;padding:0;margin:0;overflow:hidden;">
+<body style="border:none;padding:0;margin:0;overflow:hidden;width:$(SURFACE_WIDTH)px;height:$(SURFACE_HEIGHT)px">
 </body>
 
 </html>
