Commit by Elias Politakis

--- a/.SDK/DeviceWrappers/web/HTML5/index.html
+++ b/.SDK/DeviceWrappers/web/HTML5/index.html
@@ -85,6 +85,7 @@
         visibility:hidden;
         margin:5px;
         overflow:hidden;
+        display:none;
     }
 
     /* No rounded corners for Opera, because the overflow:hidden dont work with rounded corners */
